Changed profile format

--- a/profile.cfg
+++ b/profile.cfg
@@ -1,6 +1,5 @@
 ProfileCfg {
   profileID = "xmonad-test",
   profileName = "XMonad-Test",
-  installScript = Nothing,
-  builds = BuildInfo { xmonadExe = "xmonad-test", otherExes = [] }
+  installScript = Nothing
 }
