--- a/build
+++ b/build
@@ -3,9 +3,10 @@ output="$1"
 cfgid="xmonad-test"
 cache=$( dirname "$1" )
 
-mkfifo cabalout
 
 echo "[XMonad-Test Build] Begin"
+mkfifo cabalout
+
 cabal build "exe:$cfgid" | tee cabalout &
 if ! grep -q "Up to date" <cabalout ; then
   cabal install "exe:$cfgid" \
@@ -15,4 +16,6 @@ if ! grep -q "Up to date" <cabalout ; then
   # To make next Up-To-Date build faster
   cabal build "exe:$cfgid"
 fi
+
+rm cabalout
 echo "[XMonad-Test Build] End"
