--- a/profile.cfg
+++ b/profile.cfg
@@ -1,5 +1,7 @@
+# Profile Configuration. Can use # for comments
 ProfileCfg {
-  profileID = "xmonad-test",
-  profileName = "XMonad-Test",
-  installScript = Nothing
+  profileID = "xmonad-test",    # Profile ID, should be ASCII w/o spaces
+  profileName = "XMonad-Test",  # Human-readable Profile Name
+  installScript = Nothing       # Install script, either Just "/your/path/name" or Nothing
 }
+# End
