--- a/profile.cfg
+++ b/profile.cfg
@@ -2,6 +2,7 @@
 ProfileCfg {
   profileID = "xmonad-test",    # Profile ID, should be ASCII w/o spaces
   profileName = "XMonad-Test",  # Human-readable Profile Name
-  installScript = Nothing       # Install script, either Just "/your/path/name" or Nothing
+  installScript = Nothing,      # Install script, either Just "/your/path/name" or Nothing
+  buildOnStart = True           # Whether to build on startup
 }
 # End
