Profile.cfg update

--- a/profile.cfg
+++ b/profile.cfg
@@ -1,7 +1,12 @@
 # Profile Configuration. Can use # for comments
+# Paths are relative to the configuration directory
 ProfileCfg {
-  profileID = "xmonad-test",    # Profile ID, should be ASCII w/o spaces
-  profileName = "XMonad-Test",  # Human-readable Profile Name
+  ID = "xmonad-test",           # Profile ID, should be ASCII w/o spaces
+  properties = ProfileProps {
+    name = "XMonad-Test",       # Human-readable Profile Name
+    details = "XMonad test profile",
+    icon = Nothing              # Icon to display, either Just "/icon/path/name" or Nothing
+  },
   installScript = Nothing,      # Install script, either Just "/your/path/name" or Nothing
   buildOnStart = True           # Whether to build on startup
 }
