--- a/profile.cfg
+++ b/profile.cfg
@@ -1,11 +1,10 @@
 # Profile Configuration. Can use # for comments
-# Paths are relative to the configuration directory
 ProfileCfg {
   ID = "xmonad-test",           # Profile ID, should be ASCII w/o spaces
   properties = ProfileProps {
     name = "XMonad-Test",       # Human-readable Profile Name
     details = "XMonad test profile",
-    icon = Nothing              # Icon to display, either Just "/icon/path/name" or Nothing
+    icon = Nothing              # Icon to display (this one is tricky)
   },
   installScript = Nothing,      # Install script, either Just "/your/path/name" or Nothing
   buildOnStart = True           # Whether to build on startup
