--- a/profile.yaml
+++ b/profile.yaml
@@ -20,12 +20,16 @@ details: "XMonad test profile"
 # Should never call sudo.
 build: "build.sh"
 
-# Systemd service to run.
+# Main systemd service to run.
 # A service file can contain variables like XMONAD_CACHE_DIR, XMONAD_DATA_DIR, XMONAD_CONFIG_DIR,
 # which will be replaced when installed.
 # Variables should be denoted by e.g. ${XMONAD_CACHE_DIR}.
 # It is recommended to specify executable as "ExecStart=${XMONAD_CACHE_DIR}/${XMONAD_NAME}".
 run-service: "xmonad-test.service"
+
+# Other systemd services to consider.
+# While xmonad-manage does not start it, the main service file can make use of it.
+# other-services:
 
 # * Unused *
 # Run script. May run executables installed in "$XMONAD_CACHE_DIR".
